# bitz

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  wheel builder.py
bitz/: __init__.py
bitz.egg-info/: PKG-INFO  SOURCES.txt
bitz_ds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bitz/: __init__.py  classifications.py  config.yml  transformations.py  validator.py  yaml_test.py
src/bitz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bitz/config/: core.py
