[metadata]
name = bitz
version = 0.0.2
author = Viktor Ermakov
author_email = victor.ermakov@gmail.com
description = Utilities for Bitz Analytics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viktor-ermakov/bitz
project_urls =
    Bug Tracker = https://github.com/viktor-ermakov/bitz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src